<resources>
    <string name="app_name">Apoim</string>
    <string name="facebook_app_id">464296957352010</string>
    <string name="alert_network_check">No internet connection</string>
    <string name="alert_play_services_check">This device is not supported to play services.</string>
    <string name="alert_api_fail">Something went wrong, please check after some time.</string>
    <string name="select_male_female_welcome_text">You\'re...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trasnsgender">Transgender</string>
    <string name="select_chat_date_welcome_text">You\'re here to...</string>
    <string name="new_friends">Make new friends</string>
    <string name="date">Date</string>
    <string name="select_girl_guys_welcome_text">You\'re here to date with...</string>
    <string name="girl">Girl</string>
    <string name="select_public_private_welcome_text">Admit to receive invitations for event...</string>
    <string name="s_public">Public</string>
    <string name="s_private">Private</string>
    <string name="s_both">Both</string>
    <string name="or_text">OR</string>
    <string name="continue_text">continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Gmail</string>
    <string name="register_sign_in">Sign in</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="result_image_desc">crop result</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="select_email_welcome_text">Enter your email address we will send you confirmation code to verify email address</string>
    <string name="select_contact_welcome_text">Enter your phone number we will send you confirmation code to verify phone number</string>
    <string name="continue_button">Continue</string>
    <string name="hint_mobile">Mobile number</string>
    <string name="alert_mobile_null">Please enter mobile number for verification.</string>
    <string name="alert_invalid_contact">Please enter valid mobile number.</string>
    <string name="alert_otp_send_on_mobile">A OTP has been sent to your mobile number.</string>
    <string name="alert_contact_already_registred">This mobile number is already registered.</string>
    <string name="alert_contact_not_verified">This mobile number is not verified.</string>
    <string name="confirm_code_welcome_text">We have sent you a confirmation code to validate your email address</string>
    <string name="confirm_edit_hint">Enter confirmation code</string>
    <string name="resend_code">Resend Code</string>
    <string name="confirm_button">Confirm</string>
    <string name="alert_confirm_code_null">Please enter confirmation code to verify your phone number.</string>
    <string name="alert_invalid_confirm_code">Please enter valid confirmation code.</string>
    <string name="alert_mobile_verified_successfully">Your mobile number verified successfully .</string>
    <string name="alert_resend_code_successfully">Confirmation code sent successfully.</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_birthday">Birthday</string>
    <string name="register_buisness">Register Your Business</string>
    <string name="update_buisness">Update Your Business</string>
    <string name="create_account_button">Create account</string>
    <string name="accept_continue">By continuing you accept our</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="alert_email_null">Please enter email.</string>
    <string name="alert_invalid_email">Please enter valid email.</string>
    <string name="alert_name_null">Please enter name.</string>
    <string name="alert_business_name_null">Please enter business name.</string>
    <string name="alert_birthday_null">Please select birth date.</string>
    <string name="alert_name_alphabets">Name field only accept alphabets.</string>
    <string name="alert_password_sentto_email">Password has been sent to your entered email id.</string>
    <string name="hint_sign_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="alert_facebook_already_login">Already registered with Facebook</string>
    <string name="alert_gmail_already_login">Already registered with Gmail</string>
    <string name="alert_password_null">Please enter password </string>
    <string name="alert_invalid_password">Enter valid password</string>
    <string name="password_should_be_atleast">Password should be at least 8 characters long</string>
    <string name="alert_invalid_email_password">Incorrect email or password.</string>
    <string name="alert_registration_questioniare">Your gmail/facebook verification has been done, please complete the process to access the app.</string>
    <string name="alert_registration_questioniare_facebook">Your facebook verification has been done, please complete the process to access the app.</string>
    <string name="alert_registration_questioniare_gmail">Your gmail verification has been done, please complete the process to access the app.</string>
    <string name="alert_Ok">Ok</string>
    <string name="alert_header">Alert!</string>
    <string name="forgot_action_bar">Forgot password</string>
    <string name="forgot_welcome_text">Enter the email you used to set up your account.</string>
    <string name="hint_forgot_email">Email</string>
    <string name="forgot_submit_button">Submit</string>
    <string name="profile_action_bar">Profile</string>
    <string name="profile_skip">Skip</string>
    <string name="profile_welcome_text">You need to set up your profile</string>
    <string name="basic_info_text">Basic info</string>
    <string name="profile_hint_name">Name</string>
    <string name="profile_hint_birthday">Birthday</string>
    <string name="profile_male_radio">Male</string>
    <string name="profile_female_radio">Female</string>
    <string name="work_text">Work</string>
    <string name="education_text">Education</string>
    <string name="about_you_text">About You</string>
    <string name="location_text">Location</string>
    <string name="location_select_text">Please Select Location</string>
    <string name="show_map_text">Show me on map</string>
    <string name="profile_hint_select_work">Select work</string>
    <string name="profile_hint_select_education">Select education</string>
    <string name="profile_hint_select_about_you">Write something about you</string>
    <string name="somthing_went_wrong">Something went wrong please try after some time.</string>
    <string name="profile_hint_select_Location">Location</string>
    <string name="profile_yes_radio">Yes</string>
    <string name="profile_no_radio">No</string>
    <string name="logout_button">Log out</string>
    <string name="profile_select_work_dialog_heading">Select your work</string>
    <string name="profile_select_education_dialog_heading">Select your education</string>
    <string name="alert_profile_name_null">Please enter name</string>
    <string name="alert_profile_birthday_null">Please select birthday</string>
    <string name="alert_profile_work_null">Please select work</string>
    <string name="alert_profile_education_null">Please select education</string>
    <string name="all_details_are_filled">All details are fille.</string>
    <string name="alert_business_image">Please select business image.</string>
    <string name="heading_select_education_dialog">Add Education</string>
    <string name="heading_select_work_dialog">Select Work</string>
    <string name="pickImage_dialog_header">Add Photo!</string>
    <string name="pickImage_camera">Camera</string>
    <string name="pickImage_gallery">Gallery</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="user_hint_select_about_you">Write something about you...</string>
    <string name="user_about_you_text">About You</string>
    <string name="max_char_hint">0-50 Char</string>
    <string name="user_height_text">Height</string>
    <string name="user_weight_text">Weight</string>
    <string name="user_relationship_text">Relationship</string>
    <string name="user_I_speak_text">I speak</string>
    <string name="user_interests_text">Interests</string>
    <string name="add_hint">Add</string>
    <string name="user_profile_done_button">Done</string>
    <string name="alert_about_you_null">Please enter about you</string>
    <string name="alert_height_null">Please select height</string>
    <string name="alert_weight_null">Please enter weight</string>
    <string name="alert_relation_null">Please select relationship</string>
    <string name="alert_I_speak_null">Please select language</string>
    <string name="alert_interest_null">Please add atleast one interest</string>
    <string name="heading_select_height_dialog">Select Height</string>
    <string name="heading_select_weight_dialog">Enter Weight</string>
    <string name="heading_select_relationship_dialog">Add Relationship</string>
    <string name="heading_select_I_speak_dialog">I Speak</string>
    <string name="add_interest_title">Add Interest</string>
    <string name="hint_search_edit_text">Search interest</string>
    <string name="dialog_heading">Select</string>
    <string name="dialog_done_button">Done</string>
    <string name="hint_enter_weight">Enter weight</string>
    <string name="enter_weight_units_spinner">Units</string>
    <string name="image_selection_limite_msg">Maximum number of images selected</string>
    <string name="google_maps_key">AIzaSyDQnn0A-w99bPd0Qryo8UHLcWLw-JoZ3Lo</string>
    <string name="server_client_id">AIzaSyCIRG_XDTRXRqg4li4-XvnWhXuL3eh_wbQ</string>
    <string name="age_group">Age group</string>
    <string name="both">Both</string>
    <string name="guys">Guys</string>
    <string name="filter_by">Filter by</string>
    <string name="online">Online</string>
    <string name="new_">New</string>
    <string name="all">All</string>
    <string name="girls">Girls</string>
    <string name="show_me">Show me</string>
    <string name="enter_location">Enter Location</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="ohh_sorry_no_record_found">Ohh Sorry.. ! No record found.</string>
    <string name="profile_update">Profile Updated Successfully</string>
    <string name="appointment">Appointment</string>
    <string name="not_available">NA</string>
    <string name="send_request">Send Request</string>
    <string name="enter_meeting_location">Meeting location</string>
    <string name="meeting_date_and_time">Meeting date and time</string>
    <string name="images">Images</string>
    <string name="my_favorites">My Favorites</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="change_password_heading">Change Password</string>
    <string name="change_password_text">New password are required to be a minimum of 8 characters in length.</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_password_submit">Submit</string>
    <string name="chat">Chat</string>
</resources>