<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirm_code_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.apoim.activity.ConfirmationCodeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/bg_register_for_all_screens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/change_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefinsans_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/change_password_heading"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_XXLarge_Size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_light"
                    android:gravity="center_horizontal"
                    android:text="@string/change_password_text"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_Medium_Size" />

                <EditText
                    android:id="@+id/ed_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@null"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/hint_old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/text_Medium_Size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@color/colorBlack" />

                <EditText
                    android:id="@+id/ed_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@null"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/hint_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/text_Medium_Size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@color/colorBlack" />


                <EditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@null"
                    android:fontFamily="@font/nunito_light"
                    android:hint="@string/hint_confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack"
                    android:textSize="@dimen/text_Medium_Size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@color/colorBlack" />


                <TextView
                    android:id="@+id/submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:background="@drawable/bg_login_btn"
                    android:fontFamily="@font/josefinsans_semibold"
                    android:gravity="center"
                    android:text="@string/btn_password_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_Large_Size" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.apoim.util.InsLoadingView
        android:id="@+id/loading_view"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_centerInParent="true"
        android:clickable="false"
        android:src="@drawable/app_icon"
        android:visibility="gone" />

</RelativeLayout>